--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
 	<packaging>pom</packaging>
 	<name>research</name>
 
+	<parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -69,6 +76,12 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-all</artifactId>
 			<version>${activemq.version}</version>
+			<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+			</exclusions>
 		</dependency>
 
 
@@ -100,20 +113,10 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>1.7.12</version>
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.7.12</version>
-			</dependency>
 			<dependency> 
 			    <groupId>org.slf4j</groupId> 
 			    <artifactId>jcl-over-slf4j</artifactId> 
 			    <version>1.7.12</version> 
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>log4j-over-slf4j</artifactId>
-				<version>1.7.12</version>
 			</dependency>
 			
 			<dependency> 
@@ -126,12 +129,7 @@
 			    <artifactId>logback-classic</artifactId> 
 			    <version>1.1.3</version> 
 			</dependency>
-			
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.17</version>
-			</dependency>
+		
 			
 
 			
@@ -646,5 +644,6 @@
     <module>research-job</module>
     <module>research-mq-producer</module>
     <module>research-mq-consumer</module>
+    <module>research-springcloud</module>
   </modules>
 </project>
