--- a/research-web/pom.xml
+++ b/research-web/pom.xml
@@ -17,7 +17,13 @@
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>research-service</artifactId>
 			<version>${project.parent.version}</version>
-		</dependency>				
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>1.2.2.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
@@ -41,7 +47,7 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
